# btg-pactual-challenge

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  start.sh
docs/.puml/: 01_usuario_se_subscribe_fondo.puml
docs/erd/: 00-erd_mongo_db.puml
http/: funds.http
infra/: cloudformation.yml
src/: initial_data.py  main.py
src/application/: dependency_injection.py  funds.py  subscriptions.py  users.py
src/config/: __init__.py
src/domain/funds/: entities.py  repository.py
src/domain/subscriptions/: aggregates.py  entities.py  repository.py  subscription_status.py
src/domain/users/: entities.py  repository.py
src/domain/users/tests/: factories.py
src/infrastructure/application/: factory.py  processes.py
src/infrastructure/application/entities/: base.py  response.py
src/infrastructure/application/errors/: entities.py  handlers.py
src/infrastructure/logging/: entities.py  repository.py
src/infrastructure/mongodb/: __init__.py  collections.py
src/infrastructure/mongodb/services/: engine.py  repository.py  session.py  transactions.py
src/infrastructure/notificator/services/: LocalNotificationService.py  NotificacionService.py  SESService.py  SNSService.py  abstract.py
src/presentation/: __init__.py
src/presentation/funds/: __init__.py  rest.py
src/presentation/funds/v1/: contracts.py  rest.py
src/presentation/subscriptions/: __init__.py  contracts.py
src/presentation/subscriptions/v1/: contracts.py  rest.py
src/presentation/users/: __init__.py
src/presentation/users/v1/: contracts.py  rest.py
src/tests/: conftest.py  pytest.ini  test_foo.py
src/tests/integration/: test_subscriptions.py  test_users.py
